fixed issue of search bg menu not covering entire page

--- a/src/index.css
+++ b/src/index.css
@@ -59,11 +59,11 @@ body {
 
 /* Search menu custom classes */
 .search-menu-bg-active {
-  @apply absolute bottom-0 left-0 w-full h-[20vh] md:h-[200vh] bg-black/60
+  @apply fixed bottom-0 left-0 right-0 w-full h-screen bg-[#4F4F4F]/60
 }
 
 .search-menu-bg-hidden {
-  @apply absolute hidden bottom-0 left-0 w-full h-[20vh] bg-black/60
+  @apply fixed hidden bottom-0 left-0 w-full h-screen bg-[#4f4f4f]/60
 }
 
 .search-menu-close {
